# kmssnake

./: CMakeLists.txt  LICENSE  README.md  kmssnake.files  kmssnake.includes
src/: sn_app.c  sn_app.h  snake.c
src/utils/: cm_hashtable.c  cm_hashtable.h  cm_log.c  cm_log.h  cm_utils.c  cm_utils.h  ev_loop.c  ev_loop.h
src/video/: app_video.c  app_video.h  app_video_drm.c  app_video_drm_internal.h  app_video_gldrm.c  app_video_gldrm.h  app_video_gldrm_internal.h  app_video_internal.h
